# portfolio_website

./: Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_config.py
api/: main.py  schemas.py
api/routes/: chat.py
chatbot/: config.py
chatbot/api/: routes.py
chatbot/core/: document_loader.py  embeddings.py  rag_chain.py  vector_store.py
chatbot/static/: index.html
chatbot/static/css/: style.css
chatbot/static/js/: chat.js
core/: loader.py  rag_chain.py  splitter.py  vector_store.py
faiss_index/: index.faiss  index.pkl
tests/: test_chatbot.py  test_document_loader.py
ui/: streamlit_app.py
