[project]
name = "portfolio-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "jsonpatch>=1.33",
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "openai>=2.21.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
]
