[project]
name = "portfolio-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.7.4,<1.9.0",
    "fastapi>=0.129.2",
    "flask>=3.1.3",
    "google-generativeai>=0.8.6",
    "jsonpatch>=1.33",
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.10",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.0,<1.0.0",
    "langgraph>=0.2.0,<1.0.0",
    "openai>=2.21.0",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
